--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,8 +1,15 @@
 /* Ionic Variables and Theming. For more info, please see:
 http://ionicframework.com/docs/theming/ */
 
+@font-face {
+  font-family: 'Mulish';
+  src: url('../assets/fonts/Mulish/Mulish-VariableFont_wght.ttf');
+}
+
 /** Ionic CSS Variables **/
 :root {
+  --ion-font-family: 'Mulish', sans-serif;
+
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
