--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -83,6 +83,10 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-light-tint: #f5f6f9;
 }
 
+.mb-10 {
+  margin-bottom: 10px;
+}
+
 .text-overflow {
   white-space: nowrap;
   overflow: hidden;
