--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -6,6 +6,11 @@ http://ionicframework.com/docs/theming/ */
   src: url("../assets/fonts/Mulish/Mulish-VariableFont_wght.ttf");
 }
 
+@font-face {
+  font-family: "Exo2";
+  src: url("../assets/fonts/Exo_2/Exo2-VariableFont_wght.ttf");
+}
+
 /** Ionic CSS Variables **/
 :root {
   --ion-font-family: "Mulish", sans-serif;
