Moved form submit button to footer

--- a/src/pages/SellForm/SellForm.css
+++ b/src/pages/SellForm/SellForm.css
@@ -1,7 +1,7 @@
-.sell-form-field{
-
+.sell-form-field ion-label {
+  width: 100px;
 }
 
-.sell-form-field ion-label{
-    width: 100px;
+.form-submit-button {
+  font-size: 18px;
 }
