--- a/src/components/RelatedEquipmentCard/RelatedEquipmentCard.css
+++ b/src/components/RelatedEquipmentCard/RelatedEquipmentCard.css
@@ -1,16 +1,16 @@
-.related-equipment-card{
-    font-weight: normal;
-    padding-bottom: 0;
-    margin-bottom: 25px;
+.related-equipment-card {
+  font-weight: normal;
+  padding-bottom: 0;
+  margin-bottom: 25px;
 }
 
 .related-equipment-card ion-slides,
 .related-equipment-card ion-slide,
-.related-equipment-card ion-img{
-    height: 240px !important;
-    background-color: black;
+.related-equipment-card ion-img {
+  height: 240px !important;
+  background-color: black;
 }
 
-.related-equipment-card h4{
-
+.related-equipment-card ion-slides {
+  border-radius: 10px;
 }
