Updated styles of selected cover image

--- a/src/components/ImagesModal/ImagesModal.css
+++ b/src/components/ImagesModal/ImagesModal.css
@@ -5,7 +5,7 @@
 .preview-image {
   height: 120px;
   object-fit: cover;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
 }
 
 .preview-image,
@@ -14,11 +14,11 @@
 }
 
 .selected {
-  border-color: var(--ion-color-primary) !important;
-  border-style: dashed;
+  border-color: #ddd !important;
+  border-style: solid;
 }
 .selected::part(image) {
-  filter: brightness(30%);
+  filter: brightness(50%);
 }
 
 .preview-image-wrapper {
@@ -29,16 +29,15 @@
 
 .centered {
   position: absolute;
-  top: calc(100% - 20px);
+  top: calc(100% - 17px);
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 80%;
 
-  border-radius: 10px;
-  color: whitesmoke;
-  font-weight: bold;
+  border-radius: 3px 3px 0 0;
+  color: black;
   font-family: "Exo2", "sans-serif";
-  opacity: 0.8;
+  background-color: #ddd;
+  padding: 2px 10px;
 }
 
 .media-section-divider {
